# learn-query-engine

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: dataframe.rs  lib.rs  utils.rs
src/data_source/: csv.rs  memory.rs  mod.rs  parquet.rs
src/execution/: mod.rs
src/logical_plan/: expr.rs  mod.rs
src/optimizer/: mod.rs
src/physical_plan/: aggregate.rs  expr.rs  mod.rs
src/query_planner/: mod.rs
src/sql/: error.rs  expr.rs  mod.rs  parser.rs  planner.rs  token.rs  token_stream.rs  tokenizer.rs
